mockTreeData方法